[metadata]
name = intel-map-client
version = 0.2.1
maintainer = 67au
maintainer_email = oyy6745@gmail.com
description = An API client for Intel Map
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/67au/intel-map-client
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
python_requires = >=3.7
install_requires =
    httpx
    httpx-socks[asyncio]
